--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -3,5 +3,10 @@
   "btn-dream-team": "Our Dream Team",
   "btn-github": "Our GitHub",
   "btn-submit": "Send message",
-  "alert-message": "PAGE UNDER CONSTRUCTION"
+  "alert-message": "PAGE UNDER CONSTRUCTION",
+  "burger-menu": {
+    "title": "Navigation & Settings",
+    "theme-description": "Change theme:",
+    "language-description": "Select language:"
+  }
 }
