--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -3,5 +3,10 @@
   "btn-dream-team": "Nuestro equipo",
   "btn-github": "Nuestro GitHub",
   "btn-submit": "Enviar mensaje",
-  "alert-message": "PÁGINA EN CONSTRUCCIÓN"
+  "alert-message": "PÁGINA EN CONSTRUCCIÓN",
+  "burger-menu": {
+    "title": "Navegación y configuración",
+    "theme-description": "Cambiar tema:",
+    "language-description": "Seleccionar idioma:"
+  }
 }
