fix: contact card, contact button and language selector

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,5 +1,5 @@
 {
-  "btn-contact": "contact",
+  "btn-contact": "Contact",
   "btn-dream-team": "Our Dream Team",
   "btn-github": "Our GitHub",
   "btn-submit": "Send message",
