--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -1,5 +1,5 @@
 {
-  "btn-contact": "contactanos",
+  "btn-contact": "Contactanos",
   "btn-dream-team": "Nuestro equipo",
   "btn-github": "Nuestro GitHub",
   "btn-submit": "Enviar mensaje",
