fix: accent mark

--- a/public/locales/es/home.json
+++ b/public/locales/es/home.json
@@ -52,7 +52,7 @@
     }
   },
   "formGetIntouch": {
-    "title": "Contactanos",
+    "title": "Contáctanos",
     "nameLabel": "Nombre",
     "namePlaceholder": "Nombre",
     "emailLabel": "Correo",
