feat: add portfolio page

--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -1,6 +1,10 @@
 {
   "headerTopics": [
     {
+      "label": "Portfolio",
+      "link": "portfolio"
+    },
+    {
       "label": "Platform",
       "link": "platform"
     },
