--- a/public/locales/es/home.json
+++ b/public/locales/es/home.json
@@ -1,6 +1,10 @@
 {
   "headerTopics": [
     {
+      "label": "Portafolio",
+      "link": "portfolio"
+    },
+    {
       "label": "Plataforma",
       "link": "platform"
     },
