--- a/public/locales/es/portfolio.json
+++ b/public/locales/es/portfolio.json
@@ -3,23 +3,23 @@
   "industryTitle": "Sector",
   "industries": [
     {
-      "name": "Logistics",
+      "name": "Logística",
       "label": "logistics"
     },
     {
-      "name": "HealthTech",
+      "name": "Salud",
       "label": "health-tech"
     },
     {
-      "name": "AgroTech",
+      "name": "Agricultura",
       "label": "agro-tech"
     },
     {
-      "name": "Tourism",
+      "name": "Turismo",
       "label": "tourism"
     },
     {
-      "name": "Anthropology",
+      "name": "Antropología",
       "label": "anthropology"
     },
     {
@@ -29,61 +29,61 @@
   ],
   "programs": [
     {
-      "name": "Partners",
+      "name": "Socios",
       "label": "partners"
     },
     {
-      "name": "Academy",
+      "name": "Academia",
       "label": "academy"
     }
   ],
   "services": [
     {
-      "name": "Graphic Design",
+      "name": "Diseño gráfico",
       "label": "graphic-design"
     },
     {
-      "name": "Product Design",
+      "name": "Diseño de producto",
       "label": "product-design"
     },
     {
-      "name": "Web Development",
+      "name": "Desarrollo web",
       "label": "web-development"
     },
     {
-      "name": "Software Development",
+      "name": "Desarrollo de software",
       "label": "software-development"
     },
     {
-      "name": "Mobile Development",
+      "name": "Desarrollo móvil",
       "label": "mobile-development"
     },
     {
-      "name": "VR Development",
+      "name": "Desarrollo VR",
       "label": "vr-development"
     },
     {
-      "name": "System Design",
+      "name": "Diseño de sistemas",
       "label": "system-design"
     },
     {
-      "name": "IoT Development",
+      "name": "Desarrollo IoT",
       "label": "iot-development"
     },
     {
-      "name": "Research",
+      "name": "Investigación",
       "label": "research"
     },
     {
-      "name": "Exploration",
+      "name": "Exploración",
       "label": "exploration"
     },
     {
-      "name": "Creative Coding",
+      "name": "Codificación creativa",
       "label": "creative-coding"
     },
     {
-      "name": "Experience Design",
+      "name": "Diseño de experiencias",
       "label": "experience-design"
     }
   ],
@@ -149,7 +149,7 @@
     {
       "name": "Tele Us",
       "link": "tele-us",
-      "shortDescription": "Medical Images Platform",
+      "shortDescription": "Plataforma de imágenes médicas",
       "description": "Plataforma Web Responsive de tecnología open source en el sector de imágenes médicas, específicamente imágenes ecográficas para los roles pacientes y doctores.",
       "client": "Databioma",
       "program": "partners",
@@ -160,7 +160,7 @@
     {
       "name": "Pachatec",
       "link": "pachatec",
-      "shortDescription": "Landing Page",
+      "shortDescription": "Página web",
       "description": "Diseño de Manual de Marca y web, Desarrollo Web personalizado (Landing Page con formularios de registro y tablas de precios de cultivos de la zona de San Martín, Perú).",
       "client": "Inqube Latam",
       "program": "partners",
@@ -171,7 +171,7 @@
     {
       "name": "Neo Vigilancia Integrada",
       "link": "neo-vigilancia-integrada",
-      "shortDescription": "Mobile App",
+      "shortDescription": "Aplicación móvil",
       "description": "Aplicación Móvil para la recopilación de datos relacionados con el proyecto “Vigilancia Integrada” para la vigilancia entomológica de chirimachas (Triatoma infestans). Nos permite ver la información acerca del riesgo de infestación de cada casa en una zona dada y también permite ingresar los datos que recolectemos en campo, en la ciudad de Arequipa.",
       "client": "InnovaLab | Cayetano Heredia",
       "program": "academy",
@@ -182,7 +182,7 @@
     {
       "name": "Loges",
       "link": "loges",
-      "shortDescription": "Logistics Platform",
+      "shortDescription": "Plataforma logística",
       "description": "Nuevo sistema logístico que integra tracking de carga, aduana, 4PL y reportes.",
       "program": "partners",
       "client": "Gamma Cargo",
@@ -204,7 +204,7 @@
     {
       "name": "Qronica",
       "link": "qronica",
-      "shortDescription": "Mobile Platform",
+      "shortDescription": "Aplicación móvil",
       "description": "Desarrollo y mantenimiento de la plataforma y el aplicativo Qronica (dashboard para gestión y administración de recursos relacionados a estudios antropológicos).",
       "program": "partners",
       "client": "Totemiq",
@@ -226,7 +226,7 @@
     {
       "name": "Experiencia Astronomica VR",
       "link": "experiencia-astronomica-vr",
-      "shortDescription": "VR Platform",
+      "shortDescription": "Plataforma de realidad virtual",
       "description": "Entorno de VR para realizar una experiencia interactiva con temática del cielo nocturno en la epoca del Tahuantinsuyo.",
       "program": "partners",
       "client": "Planetario Cusco",
@@ -244,7 +244,7 @@
     {
       "name": "Vax Canina",
       "link": "vax-canina",
-      "shortDescription": "Mobile App",
+      "shortDescription": "Aplicación móvil",
       "description": "Aplicativo móvil que incluye el ingreso de datos con captura de datos espacial de puntos fijos que sirva para captar las direcciones rápidamente de la gente que se acerca para vacunar a sus perros y el rastreo de los vacunadores puerta a puerta, con seguimiento de rutas.",
       "program": "academy",
       "client": "InnovaLab | Cayetano Heredia",
@@ -266,7 +266,7 @@
     {
       "name": "Workdyst",
       "link": "workdyst",
-      "shortDescription": "AR",
+      "shortDescription": "Aplicación móvil",
       "description": "Plataforma de Comunicación para facilitar el trabajo en campo, mediante la Gestión a tiempo real de la información de los proyectos y la potenciación de la colaboración de los trabajadores.",
       "program": "partners",
       "client": "Workdyst, CLV contratistas",
