feat: clients carousel

--- a/public/locales/es/home.json
+++ b/public/locales/es/home.json
@@ -93,6 +93,7 @@
       "answer": "Actualmente estamos trabajando en una nueva página de preguntas frecuentes. Mantente atento."
     }
   ],
+  "clientsTitle": "Nuestros clientes",
   "footerInformation": {
     "brandTrademark": "🇵🇪 2022 Minsky S.A.C.",
     "tagline": "Somos una empresa, una comunidad y también un sistema vivo.",
