feat: svg icons added

--- a/public/locales/es/home.json
+++ b/public/locales/es/home.json
@@ -50,6 +50,7 @@
     "title": "Nuestros Servicios",
     "services": [
       {
+        "icon": "alfa",
         "title":"Diseño y marca",
         "description":"Creamos un diseño funcional de rápido prototipado, pero adecuado para tu idea.",
         "items":[
@@ -58,6 +59,7 @@
         ]
       },
       {
+        "icon": "alfa",
         "title":"Desarrollo de Software",
         "description":"Usamos modernos paradigmas de desarrollo de Sotfware.",
         "items":[
@@ -68,6 +70,7 @@
         ]
       },
       {
+        "icon": "alfa",
         "title":"Consultorías y/o Asesorías",
         "description":"Te ayudamos a desarrollar tu producto desde cero.",
         "items":[
@@ -76,6 +79,7 @@
         ]
       },
       {
+        "icon": "alfa",
         "title":"DevOps, Infraestructura y Cloud",
         "description":"Nos especializamos en servicios end-to-end.",
         "items":[
@@ -86,6 +90,7 @@
         ]
       },
       {
+        "icon": "alfa",
         "title":"Data Science y AI",
         "description":"Extraemos, limpiamos, procesamos, estructuramos los datos y le damos valor a su uso a través de IA.",
         "items":[
@@ -95,6 +100,7 @@
         ]
       },
       {
+        "icon": "alfa",
         "title":"Otros servicios",
         "description":"Estamos en constante cambio tecnológico, conocemos sobre herramientas y tecnologías en general que pueden ayudarte a crecer en tu negocio o investigación.",
         "items":[
