--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -50,6 +50,7 @@
     "title": "Our Services",
     "services": [
       {
+        "icon": "alfa",
         "title":"Design and branding",
         "description":"We create a functional design of fast prototyping, but suitable for your idea.",
         "items":[
@@ -58,6 +59,7 @@
         ]
       },
       {
+        "icon": "alfa",
         "title":"Software Development",
         "description":"We use modern software development paradigms.",
         "items":[
@@ -68,6 +70,7 @@
         ]
       },
       {
+        "icon": "alfa",
         "title":"Consultancies and/or Advising",
         "description":"We help you develop your product from scratch.",
         "items":[
@@ -76,6 +79,7 @@
         ]
       },
       {
+        "icon": "alfa",
         "title":"DevOps, Infrastructure and Cloud",
         "description":"We are specialized in end-to-end services.",
         "items":[
@@ -86,6 +90,7 @@
         ]
       },
       {
+        "icon": "alfa",
         "title":"Data Science and AI",
         "description":"We extract, clean, process, structure data and give value to its use through AI.",
         "items":[
@@ -95,6 +100,7 @@
         ]
       },
       {
+        "icon": "alfa",
         "title":"Other Services",
         "description":"We are in constant technological change, we know about tools and technologies in general that can help you grow your business or research.",
         "items":[
