--- a/public/locales/es/home.json
+++ b/public/locales/es/home.json
@@ -19,9 +19,9 @@
       "type": "section"
     },
     {
-      "id": "sales",
+      "id": "quote",
       "label": "Cotizador",
-      "link": "sales",
+      "link": "quote",
       "type": "section"
     }
   ],
